--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -217,7 +217,7 @@ section{
 .contact h2 {
   color: #fce138;
 }
-.contact-info iframe {
+contact-info iframe {
   width: 400px;
   height: 400px;
 }
@@ -229,3 +229,20 @@ section{
   margin: 30px 0 0 60px;
   color: white;
 }
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a {
+  color: #fce138;
+}
+
+/* REACH OUT STYLES END */
