--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1,89 +1,112 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  color: #39a6b2;
 }
 
-/* header starts */
+body {
+  color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+
+/* HEADER / NAV BAR STYLES START */
+
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
 }
+
 header h1 {
   font-weight: bold;
+  display: inline;
+  margin: 0;
   font-size: 36px;
   color: #fce138;
-  margin: 0;
-  display: inline;
 }
+
 header a {
   text-decoration: none;
   color: #fce138;
 }
+
 header nav {
   float: right;
   margin: 7px 0;
 }
+
 header nav ul li {
   display: inline;
 }
+
 header nav ul li a {
   margin: 0 30px;
   font-weight: lighter;
   font-size: 22px;
 }
-/* header ends */
 
-/* footer starts */
+/* HEADER / NAVBAR STYLES END */
+
+
+
+/* FOOTER STYLES START */
 footer {
   background: #fce138;
-  width: 100%;
   padding: 40px 35px;
+  width: 100%;
 }
+
 footer h2 {
   display: inline;
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
+
 footer div {
-  float: rihgt;
+  float: right;
   line-height: 1.5;
   text-align: right;
 }
+
 footer a {
   color: #024e76;
 }
-section{
+/* END FOOTER STYLES */
+
+/* STYLE ALL SECTION TAGS */
+section {
   padding: 60px;
 }
-/* footer ends */
 
-/* Hero Style Start */
-.hero{
-  background-image: url(../images/flipped-hero-image.jpg);
-  height: 600px;
+/* HERO STYLES START */
+.hero {
+  background-image: url('../images/hero-bg.jpg');
   background-size: cover;
   background-position: center;
   position: relative;
+  height: 600px;
 }
+
 .hero-form {
+  border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
   width: 500px;
   color: #024e76;
-  border: solid 3px #024e76;
   position: absolute;
   bottom: 120px;
   right: 140px;
 }
+
+.hero-form h3 {
+  font-size: 24px;
+  margin: 0;
+}
 .hero-form p {
   margin: 5px 0 15px 0;
 }
+
 .form-input {
   border: 1px solid #024e76;
   display: block;
@@ -91,65 +114,31 @@ section{
   font-size: 16px;
   color: #024e76;
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 15px; 
 }
-.hero-form label{
+
+.hero-form label {
   margin: 0 5px;
 }
+
 .hero-form button {
   color: #fce138;
   background-color: #024e76;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
-}
-/* Hero Styles End */
+} 
+/* HERO STYLES END */
 
-/* intro starts */
-.intro {
-  text-align: center;
-}
-.intro h2 {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  border-color: #fce138;
-}
-.intro h2 {
 
-  display: inline-block;
-}
-.intro p {
-  line-height: 1.7;
-  color: #39a6b2;
-  width: 80%;
-  font-size: 20px;
-  margin: 0 auto;
-}
-/* intro ends */
-
-/* steps start */
-.steps {
-  text-align: center;
-  background: #fce138;
-}
-.steps h2 {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  border-color: #39a6b2;
-}
+/* SECTION TITLE STYLES START */
 .section-title {
   font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
   display: inline-block;
+  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
+  margin-bottom: 35px;
+  color: #024e76;
 }
 
 .primary-border {
@@ -159,6 +148,29 @@ section{
 .secondary-border {
   border-color: #39a6b2;
 }
+/* SECTION TITLE STYLES END */
+
+/* WHAT WE DO STYLES */
+.intro {
+  text-align: center;
+}
+
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  margin: 0 auto;
+  font-size: 20px;
+}
+/* WHAT YOU DO STYLES END */
+
+
+/* WHAT YOU DO STYLES START */
+.steps { 
+  text-align: center;
+  background: #fce138;
+}
+
 .steps div {
   margin-bottom: 80px;
 }
@@ -166,7 +178,7 @@ section{
 .steps img {
   width: 15%;
   margin: 10px 0;
-}
+} 
 
 .steps h3 {
   color: #024e76;
@@ -174,16 +186,21 @@ section{
   margin-top: 10px;
 }
 
+.steps span {
+  font-size: 38px;
+}
+
 .steps p {
   color: #39a6b2;
   font-size: 23px;
 }
-/* steps end */
+/* WHAT YOU DO STYLES END */
 
-/* thrainers start */
+/* MEET THE TRAINERS START */
 .trainers {
   text-align: center;
 }
+
 .trainer {
   width: 900px;
   margin: 0 auto 30px auto;
@@ -191,6 +208,7 @@ section{
   color: #fce138;
   overflow: auto;
 }
+
 .trainer img {
   width: 35%;
   float: left;
@@ -201,26 +219,39 @@ section{
   float: left;
   width: 65%;
 }
-.section-title {
-  font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  margin-bottom: 35px;
-  color: #024e76;
+
+.trainer-bio h3 {
+  font-size: 32px;
+  margin-bottom: 8px;
 }
+
+.trainer-bio h4 {
+  font-weight: lighter;
+  font-size: 26px;
+  margin-bottom: 25px;
+}
+
+.trainer-bio p {
+  font-size: 17px;
+  line-height: 1.3;
+}
+/* TRAINER STYLES END */
+
 /* REACH OUT STYLES START */
 .contact {
   text-align: center;
   background: #024e76;
 }
+
 .contact h2 {
   color: #fce138;
 }
-contact-info iframe {
+
+.contact-info iframe {
   width: 400px;
-  height: 400px;
+height: 400px;
 }
+
 .contact-info div {
   width: 410px;
   display: inline-block;
@@ -229,10 +260,12 @@ contact-info iframe {
   margin: 30px 0 0 60px;
   color: white;
 }
+
 .contact-info h3 {
   color: #fce138;
   font-size: 32px;
 }
+
 .contact-info p, .contact-info address {
   margin: 20px 0;
   line-height: 1.5;
@@ -243,4 +276,15 @@ contact-info iframe {
 .contact-info a {
   color: #fce138;
 }
+
+
 /* REACH OUT STYLES END */
+
+/* UTILITIES */
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
