--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -18,6 +18,14 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-image: url("../images/hero-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 header h1 {
@@ -25,6 +33,7 @@ header h1 {
   margin: 0;
   font-size: 36px;
   color: #fce138;
+  text-shadow: rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -48,6 +57,14 @@ header nav ul li a {
   padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
+  text-shadow: rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 /* HEADER / NAVBAR STYLES END */
@@ -94,15 +111,19 @@ section {
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 .hero-form {
   border: 3px solid #024e76;
+  border-radius: 15px;
   background-color: #fce138;
   padding: 20px;
   color: #024e76;
   width: 40%;
   margin: 3.5%;
+  box-shadow: rgba(0, 0, 0, 0.5);
 }
 
 .hero-form h3 {
@@ -113,6 +134,10 @@ section {
   margin: 5px 0 15px 0;
 }
 
+.hero-form button:hover {
+  background-color: #39a6b2;
+}
+
 .form-input {
   border: 1px solid #024e76;
   display: block;
@@ -121,7 +146,13 @@ section {
   color: #024e76;
   width: 100%;
   margin-bottom: 15px; 
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.75);
 }
+ .form-input:focus {
+   background-color: rgba(255, 255, 255, 1);
+   outline: none;
+ }
 
 .hero-form label {
   margin: 0 5px;
@@ -133,6 +164,7 @@ section {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
+  border-radius: 10px;
 } 
 
 .hero-cta {
@@ -148,6 +180,7 @@ section {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: rgba(0, 0, 0, 0.5);
 }
 /* HERO STYLES END */
 
@@ -189,7 +222,6 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -234,6 +266,10 @@ section {
 
 .step-img img {
   max-width: 100%;
+}
+
+.step:nth-child(even) {
+  border-bottom: 1px solid #39a6b2;
 }
 /* WHAT YOU DO STYLES END */
 
@@ -326,6 +362,7 @@ section {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
 }
 
 .contact-info a {
@@ -340,8 +377,21 @@ section {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+  border-radius: 10px;
 } 
 
+.contact-form input, .contact-form textarea {
+  background: transparent;
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+   
+}
+
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
+}
 /* REACH OUT STYLES END */
 
 /* UTILITIES */
@@ -357,11 +407,19 @@ section {
   display: flex;
 }
 
+/* Shadows */
+.some-class {
+  text-shadow: 5px 10px 15px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.25);
+}
+
+
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
